--- a/demo/src/dashboard/dashboard.css
+++ b/demo/src/dashboard/dashboard.css
@@ -108,9 +108,26 @@ body {
     align-items: center; 
     border: 1px;
 }
-.search-box { border: 1px solid #ccc; border-right: none; padding: 0.6rem; border-top-left-radius: var(--border-radius); border-bottom-left-radius: var(--border-radius); font-family: var(--font-primary); }
-.search-box:focus { outline: 1px solid var(--accent-color-1); }
-.search-btn { border: 1px solid var(--accent-color-1); background-color: var(--accent-color-1); color: var(--text-light); padding: 0.6rem 0.8rem; border-top-right-radius: var(--border-radius); border-bottom-right-radius: var(--border-radius); cursor: pointer; }
+.search-box { 
+    border: 1px solid #ccc; 
+    border-right: none; 
+    padding: 0.6rem; 
+    border-top-left-radius: var(--border-radius); 
+    border-bottom-left-radius: var(--border-radius); 
+    font-family: var(--font-primary); 
+}
+.search-box:focus { 
+    outline: 1px solid var(--accent-color-1); 
+}
+.search-btn { 
+    border: 1px solid var(--accent-color-1); 
+    background-color: var(--accent-color-1); 
+    color: var(--text-light); 
+    padding: 0.6rem 0.8rem; 
+    border-top-right-radius: var(--border-radius); 
+    border-bottom-right-radius: var(--border-radius); 
+    cursor: pointer; 
+}
 .controls-bar { 
     display: flex; 
     align-items: center; 
@@ -124,7 +141,8 @@ body {
     box-shadow: var(--shadow-soft);
     margin-bottom: 2rem;
 }
-.controls-header, .review-controls { display: flex; 
+.controls-header, .review-controls { 
+    display: flex; 
     justify-content: space-between;
     align-items: center;
     margin-bottom: 1.5rem;
